--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h3 {
   text-align: center;
   font-size: 2em;
 }
-h4 {
+h3 {
   font-size: 1.6em;
 }
 .desktop {
@@ -331,11 +331,13 @@ section {
   padding: 50px 0;
   overflow: hidden;
 }
-section h3 {
+.d-center {
+  text-align: center;
   position: absolute;
   top: 80px;
   width: 100%;
 }
+
 section .container {
   position: relative;
 }
@@ -352,7 +354,8 @@ section div .text {
 section div .text > div {
   margin: 60px 0;
 }
-section div .text h4 {
+section div .text h3,
+.text h2 {
   margin: 0 0 30px;
 }
 section div .image {
@@ -523,6 +526,12 @@ footer div.container a:hover {
     padding: 50px 0;
   }
   section h2 {
+    position: static;
+    top: 0px;
+    width: 100%;
+    margin: 80px 0 60px;
+  }
+  section .d-center {
     position: static;
     top: 0px;
     width: 100%;
